--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,2 +1,165 @@
 @import "bootstrap";
 @import "toastr";
+
+/*
+html5doctor.com Reset Stylesheet
+v1.6.1
+Last Updated: 2010-09-17
+Author: Richard Clark - http://richclarkdesign.com
+Twitter: @rich_clark
+*/
+
+html, body, div, span, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+abbr, address, cite, code,
+del, dfn, em, img, ins, kbd, q, samp,
+small, strong, sub, sup, var,
+b, i,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, figcaption, figure,
+footer, header, menu, nav, section, summary,
+time, mark, audio, video {
+  margin:0;
+  padding:0;
+  border:0;
+  outline:0;
+  font-size:100%;
+  vertical-align:baseline;
+  background:transparent;
+}
+
+body {
+  line-height:1;
+}
+
+article,aside,details,figcaption,figure,
+footer,header,menu,nav,section {
+  display:block;
+}
+
+nav ul {
+  list-style:none;
+}
+
+blockquote, q {
+  quotes:none;
+}
+
+blockquote:before, blockquote:after,
+q:before, q:after {
+  content:'';
+  content:none;
+}
+
+a {
+  margin:0;
+  padding:0;
+  font-size:100%;
+  vertical-align:baseline;
+  background:transparent;
+}
+
+/* change colours to suit your needs */
+ins {
+  background-color:#ff9;
+  color:#000;
+  text-decoration:none;
+}
+
+/* change colours to suit your needs */
+mark {
+  background-color:#ff9;
+  color:#000;
+  font-style:italic;
+  font-weight:bold;
+}
+
+del {
+  text-decoration: line-through;
+}
+
+abbr[title], dfn[title] {
+  border-bottom:1px dotted;
+  cursor:help;
+}
+
+table {
+  border-collapse:collapse;
+  border-spacing:0;
+}
+
+/* change border colour to suit your needs */
+hr {
+  display:block;
+  height:1px;
+  border:0;
+  border-top:1px solid #cccccc;
+  margin:1em 0;
+  padding:0;
+}
+
+input, select {
+  vertical-align:middle;
+}
+
+@font-face {
+  font-family: josefin;
+  src: font-url('JosefinSans-Regular.eot');
+  src: font-url('JosefinSans-Regular.ttf') format('truetype'),
+  font-url('JosefinSans-Regular.eot?#iefix') format('embedded-opentype'),
+  font-url('JosefinSans-Regular.woff') format('woff'),
+  font-url('JosefinSans-Regular.svg#webfont') format('svg');
+}
+
+@font-face {
+  font-family: josefinBold;
+  src: font-url('JosefinSans-Bold.eot');
+  src: font-url('JosefinSans-Bold.ttf') format('truetype'),
+  font-url('JosefinSans-Bold.eot?#iefix') format('embedded-opentype'),
+  font-url('JosefinSans-Bold.woff') format('woff'),
+  font-url('JosefinSans-Bold.svg#webfont') format('svg');
+}
+
+body, p, a{
+  font-family: josefin;
+}
+
+h1, h2, h3, h4, h5, h6, strong, .bold-text {
+  font-family: josefinBold;
+}
+.top-home{
+  background: #212121;
+  color: #fff;
+  padding: 15px;
+  h1{
+    font-size: 40px;
+  }
+}
+.top_img_home{
+  background-image: image-url('home_big.jpg');
+  width: 100%;
+  height: 400px;
+  .container{
+    text-align: center;
+    padding-top: 100px;
+  }
+  h1{
+    color: #fff;
+    font-size: 30px;
+  }
+}
+
+/*login form*/
+.trip-form{
+  .modal-header{
+    background: #212121;
+    color: #fff;
+    .close{
+      color:#fff;
+      opacity: 1;
+    }
+  }
+
+}
