--- a/app/views/home/_register.html.erb
+++ b/app/views/home/_register.html.erb
@@ -21,6 +21,13 @@
             <label for="confirm-password" class="form-control-label">Confirm Password:</label>
             <input type="password" class="form-control" id="confirm-password" placeholder="Re-Enter your password">
           </div>
+          <label for="file" class="form-control-label">Avatar: </label>
+          <div class="form-group">
+          <label class="file">
+            <input type="file" id="file">
+            <span class="file-custom"></span>
+          </label>
+            </div>
         </form>
       </div>
       <div class="modal-footer">
