--- a/app/views/home/_login.html.erb
+++ b/app/views/home/_login.html.erb
@@ -1,4 +1,5 @@
-<div class="modal fade trip-form" id="login-form" tabindex="-1" role="dialog" aria-labelledby="loginFormLabel" aria-hidden="true">
+<div class="modal fade trip-form" id="login-form" tabindex="-1" role="dialog" aria-labelledby="loginFormLabel"
+     aria-hidden="true" xmlns="http://www.w3.org/1999/html">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
@@ -9,9 +10,11 @@
       </div>
       <div class="modal-body">
         <form>
+          <%= render 'share/error', errors: @errors %>
           <div class="form-group">
             <label for="email" class="form-control-label">Email:</label>
-            <input type="text" class="form-control" id="email" placeholder="Enter your email">
+            <input type="text" class="form-control" id="email" value="<%= params[:email] %>"
+                   name="user[email]" placeholder="Enter your email">
           </div>
           <div class="form-group">
             <label for="password" class="form-control-label">Password:</label>
@@ -20,8 +23,15 @@
         </form>
       </div>
       <div class="modal-footer">
+        <div class="row">
+          <div class="col-md-6">
+            <button type="button" class="btn btn-success btn-lg btn-block">Login</button>
+          </div>
 
-        <button type="button" class="btn btn-primary btn-lg btn-block">Login</button>
+          <div class="col-md-6">
+            <button type="button" class="btn btn-primary btn-lg btn-block">Login with Facebook</button>
+          </div>
+        </div>
       </div>
     </div>
   </div>
