--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,24 @@
 <body>
 
 <%= render 'share/navbar' %>
-
+<% if params[:controller]=='home'  %>
+<div class="top_img_home">
+  <div class="container">
+    <h1> Love your planned trip... </h1>
+    <form class="form-inline home-search">
+      <div class="form-group">
+        <label class="sr-only" for="fromPlace">From</label>
+        <input type="email" class="form-control home-search-box" id="fromPlace" placeholder="Departure">
+      </div>
+      <div class="form-group">
+        <label class="sr-only" for="toPlace">Password</label>
+        <input type="password" class="form-control home-search-box" id="toPlace" placeholder="Destination">
+      </div>
+      <button type="submit" class="btn btn-primary">Search</button>
+    </form>
+  </div>
+</div>
+    <% end %>
 <div class="container">
   <%= yield %>
 </div>
