location with map

--- a/app/views/locations/show.html.erb
+++ b/app/views/locations/show.html.erb
@@ -60,4 +60,9 @@
     <img src="http://www.photoweeklyonline.com/wp-content/uploads/2011/12/Ho_Chi_Minh_Traffic.jpg" alt="Orange">
   </a>
 </div>
+
+<h2>Maps</h2>
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3919.411213698215!2d106.69680611480088!3d10.779783792319263!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31752f37e6d82451%3A0xe84f59936ced5b45!2sSaigon+Notre-Dame+Basilica!5e0!3m2!1sen!2s!4v1460138362131" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+
+
 </div>
