--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -215,7 +215,9 @@ h2, h3, h4, h5, h6, strong, .bold-text {
   }
   h2{
     font-size: 30px;
-    margin-bottom: 10px;
+    margin: 10px 0;
+    color: #0E507B;
+    text-decoration: underline;
   }
 
   p{
