finish login/logout/user

--- a/app/views/share/_error.html.erb
+++ b/app/views/share/_error.html.erb
@@ -1,7 +1,7 @@
 <% if errors && !errors.empty? %>
-    <div class="alert alert-danger" role="alert">
-      <% errors.each do |error| %>
-          <%= error %><br/><br>
-      <% end %>
-    </div>
+    <% errors.each do |error| %>
+        <div class="alert alert-danger" role="alert">
+          <%= error %>
+        </div>
+    <% end %>
 <% end %>
