--- a/app/views/share/_model_error.html.erb
+++ b/app/views/share/_model_error.html.erb
@@ -1,7 +1,7 @@
 <% if object && !object.errors.empty? %>
-    <div class="alert alert-danger" role="alert">
-      <% object.errors.full_messages.each do |msg| %>
-          <%= msg %><br/><br>
-      <% end %>
-    </div>
+    <% object.errors.full_messages.each do |msg| %>
+        <div class="alert alert-danger" role="alert">
+          <%= msg %>
+        </div>
+    <% end %>
 <% end %>
