--- a/app/views/locations/_place.html.erb
+++ b/app/views/locations/_place.html.erb
@@ -46,20 +46,17 @@
   </div>
 
   <div id="photos-place">
-    <% foreach %>
-    <a href="http://images.nationalgeographic.com/wpf/media-live/photos/000/714/overrides/ho-chi-minh-city-vietnam_71471_990x742.jpg" title="Banana" data-gallery>
-      <img src="http://images.nationalgeographic.com/wpf/media-live/photos/000/714/overrides/ho-chi-minh-city-vietnam_71471_990x742.jpg" alt="Banana">
-    </a>
+    <% if !@photos.blank? %>
+      <% @photos.each do |photo| %>
+      <a href="<%= GoogleApiClient.get_place_photo(photo.photo_reference, photo.height) %>" title="<%=  place.name %>" data-gallery>
+        <img src="<%= GoogleApiClient.get_place_photo(photo.photo_reference, photo.height) %>" alt="<%=  place.name %>">
+      </a>
+      <% end %>
+    <% else %>
+      <p>There is no image for this location yet.</p>
     <% end %>
-
-    <a href="http://cache1.asset-cache.net/gc/523959663-sunrise-over-ho-chi-minh-city-gettyimages.jpg?v=1&c=IWSAsset&k=2&d=21zqa0CogSjKAyX7FkEw6LrGEseUti1Miq926hUnniodYh4KDlVbnhbTmY1hH%2Fed4KLZNeQbNGkFImowLsMbOw%3D%3D" title="Apple" data-gallery>
-      <img src="http://cache1.asset-cache.net/gc/523959663-sunrise-over-ho-chi-minh-city-gettyimages.jpg?v=1&c=IWSAsset&k=2&d=21zqa0CogSjKAyX7FkEw6LrGEseUti1Miq926hUnniodYh4KDlVbnhbTmY1hH%2Fed4KLZNeQbNGkFImowLsMbOw%3D%3D" alt="Apple">
-    </a>
-    <a href="http://www.photoweeklyonline.com/wp-content/uploads/2011/12/Ho_Chi_Minh_Traffic.jpg" title="Orange" data-gallery>
-      <img src="http://www.photoweeklyonline.com/wp-content/uploads/2011/12/Ho_Chi_Minh_Traffic.jpg" alt="Orange">
-    </a>
   </div>
 
   <h2>Maps</h2>
-  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3919.411213698215!2d106.69680611480088!3d10.779783792319263!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31752f37e6d82451%3A0xe84f59936ced5b45!2sSaigon+Notre-Dame+Basilica!5e0!3m2!1sen!2s!4v1460138362131" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+  <iframe src="<%= GoogleApiClient.get_map_frame(place.location_id) %>" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 </div>
