--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -46,13 +46,10 @@
   </div>
 
   <div id="photos-place">
-    <% if !@place_photos.blank? %>
-      <%= render @place_photos %>
-    <% else %>
-      <p>There is no image for this location yet.</p>
-    <% end %>
+    <%= render_place_photos(@place_photos) %>
   </div>
 
   <h2>Maps</h2>
-  <iframe src="<%= @place.map_url %>" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+  <iframe src="<%= @place.map_url %>" width="600" height="450"
+          frameborder="0" style="border:0" allowfullscreen></iframe>
 </div>
