--- a/app/views/share/_navbar.html.erb
+++ b/app/views/share/_navbar.html.erb
@@ -8,8 +8,8 @@
           <ul class="nav nav-tabs top-after-login">
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
-                <img src="http://designwannabe.com/wp-content/themes/AdvancedGallery/images/default-avatar.gif" alt="default" width="30" class="img-rounded">
-                <span>Username</span>
+                <%= image_tag current_user.avatar, width: 30, class: "image-rounded" %>
+                <span><%= current_user.name %></span>
               </a>
               <div class="dropdown-menu">
                 <%= link_to 'Logout', sessions_path, method: :delete, class: 'dropdown-item' %>
