--- a/app/views/share/_navbar.html.erb
+++ b/app/views/share/_navbar.html.erb
@@ -8,7 +8,7 @@
           <ul class="nav nav-tabs top-after-login">
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
-                <%= image_tag current_user.avatar, width: 30, class: "image-rounded" %>
+                <%= image_tag current_user.avatar, width: 30, class: "img-rounded" %>
                 <div class="username-right-top"><%= current_user.name %></div>
               </a>
               <div class="dropdown-menu">
