--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,9 +3,12 @@
  *= require bootstrap-image-gallery
  *= require blueimp-gallery-indicator
  *= require blueimp-gallery-video
+ *= require jquery-ui
+ *= require jquery.tagit.css
 */
 @import "bootstrap";
 @import "toastr";
+@import 'bootstrap-datetimepicker';
 
 /*
 html5doctor.com Reset Stylesheet
@@ -262,29 +265,28 @@ h2, h3, h4, h5, h6, strong, .bold-text {
 /*process form*/
 /*form styles*/
 #msform {
-  width: 400px;
   margin: 50px auto;
   text-align: center;
   position: relative;
+  width: 1000px;
 }
-#msform fieldset {
+#msform .form-slide {
   background: white;
   border: 0 none;
   border-radius: 3px;
   box-shadow: 0 0 15px 1px rgba(0, 0, 0, 0.4);
   padding: 20px 30px;
   box-sizing: border-box;
-  width: 80%;
-  margin: 0 10%;
-
+  width: 1000px;
+  margin: 0;
   /*stacking fieldsets above each other*/
   position: relative;
 }
 /*Hide all except first fieldset*/
-#msform fieldset:not(:first-of-type) {
+#msform .form-slide:not(:first-of-type) {
   display: none;
 }
-/*inputs*/
+/*inputs
 #msform input, #msform textarea {
   padding: 15px;
   border: 1px solid #ccc;
@@ -295,10 +297,10 @@ h2, h3, h4, h5, h6, strong, .bold-text {
   font-family: montserrat;
   color: #2C3E50;
   font-size: 13px;
-}
+}*/
 /*buttons*/
 #msform .action-button {
-  width: 100px;
+
   background: #27AE60;
   font-weight: bold;
   color: white;
@@ -333,10 +335,9 @@ h2, h3, h4, h5, h6, strong, .bold-text {
 }
 #progressbar li {
   list-style-type: none;
-  color: white;
   text-transform: uppercase;
-  font-size: 9px;
-  width: 33.33%;
+  font-size: 13px;
+  width: 200px;
   float: left;
   position: relative;
 }
@@ -357,7 +358,7 @@ h2, h3, h4, h5, h6, strong, .bold-text {
   content: '';
   width: 100%;
   height: 2px;
-  background: white;
+  background: #777;
   position: absolute;
   left: -50%;
   top: 9px;
@@ -371,5 +372,5 @@ h2, h3, h4, h5, h6, strong, .bold-text {
 /*The number of the step and the connector before it = green*/
 #progressbar li.active:before,  #progressbar li.active:after{
   background: #27AE60;
-  color: white;
+
 }
