fix button basic info

--- a/app/views/trips/_basic_info.html.erb
+++ b/app/views/trips/_basic_info.html.erb
@@ -43,8 +43,7 @@
       <button type="button" class="btn btn-primary btn-lg btn-block" id="addSchedule">Add Schedule Details</button>
     </fieldset>
 
-    <button type="submit" class="btn btn-primary">Submit</button>
-    <input type="button" name="next" class="next action-button" value="Next" />
+    <input type="button" name="next" class="next action-button" value="Save & Next" />
 
   </form>
 </div>
