--- a/app/views/share/_navbar.html.erb
+++ b/app/views/share/_navbar.html.erb
@@ -5,17 +5,20 @@
     </div>
     <div class="info-right">
       <% if sign_in? %>
-          <ul class="nav nav-tabs top-after-login">
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
+
+          <ul class="nav nav-pills top-after-login">
+
+            <li role="presentation" class="dropdown">
+              <a class="dropdown-toggle nav-link" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
                 <%= image_tag current_user.avatar, width: 30, class: "img-rounded" %>
-                <div class="username-right-top"><%= current_user.name %></div>
+                <div class="username-right-top"><%= current_user.name %></div> <span class="caret"></span>
               </a>
-              <div class="dropdown-menu">
-                <%= link_to 'Logout', sessions_path, method: :delete, class: 'dropdown-item' %>
-                <%= link_to 'Profile', edit_user_path(current_user_id), method: :get, class: 'dropdown-item' %>
-              </div>
+              <ul class="dropdown-menu">
+                <li><%= link_to 'Logout', sessions_path, method: :delete %></li>
+                <li><%= link_to 'Profile', edit_user_path(current_user_id), method: :get %></li>
+              </ul>
             </li>
+
           </ul>
       <% else %>
           <div class="top-before-login">
