--- a/app/views/trips/_form.html.erb
+++ b/app/views/trips/_form.html.erb
@@ -20,14 +20,23 @@
 <script>
   $(document).ready(function(){
     $('#addSchedule').click(function(){
+      var current_schedule = $('.basic-schedule-detail').length;
       var number_schedule = $('.basic-schedule-detail').length + 1;
+      var new_departure = $('#destination_' + current_schedule).val();
+      var new_start_date = $('#end-date_' + current_schedule).val();
       var append = '<div class="row basic-schedule-detail">' +
-          '<div class="col-md-3"><input type="text" class="form-control" id="departure_'+ number_schedule +'" /></div>' +
+          '<div class="col-md-3"><input type="text" class="form-control" id="departure_'+ number_schedule +'" value= "'+ new_departure +'"/></div>' +
           '<div class="col-md-3"><input type="text" class="form-control" id="destination_'+ number_schedule +'" /></div>' +
-          '<div class="col-md-3"><input type="text" class="form-control datetimepicker" id="start-date_'+ number_schedule +'" /></div>' +
+          '<div class="col-md-3"><input type="text" class="form-control datetimepicker" id="start-date_'+ number_schedule +'" value="'+ new_start_date+'"/></div>' +
           '<div class="col-md-3"><input type="text" class="form-control datetimepicker" id="end-date_'+ number_schedule +'" /></div>' +
           '</div>';
       $('.basic-info-schedule').append(append);
+      $('#start-date_' + number_schedule).datetimepicker({
+        format: 'DD-MMM-YYYY'
+      });
+      $('#end-date_' + number_schedule).datetimepicker({
+        format: 'DD-MMM-YYYY'
+      });
     });
     $('.datetimepicker').datetimepicker({
       format: 'DD-MMM-YYYY'
