--- a/app/views/trips/_form.html.erb
+++ b/app/views/trips/_form.html.erb
@@ -9,85 +9,50 @@
     <li>Attachment</li>
   </ul>
   <!-- fieldsets -->
-<%= render "basic_info" %>
-<%= render "itinerary" %>
-<%= render "budget_plan" %>
-  <%= render "todo" %>
-  <%= render "attachment" %>
-
+  <%= render 'trips/basic_info' %>
+  <%= render 'trips/itinerary' %>
+  <%= render 'trips/budget_plan' %>
+  <%= render 'trips/todo' %>
+  <%= render 'trips/attachment' %>
 </div>
 
 <script>
-  $(document).ready(function(){
-    $('#addSchedule').click(function(){
-      var current_schedule = $('.basic-schedule-detail').length;
-      var number_schedule = $('.basic-schedule-detail').length + 1;
-      var new_departure = $('#destination_' + current_schedule).val();
-      var new_start_date = $('#end-date_' + current_schedule).val();
-      var append = '<div class="row basic-schedule-detail">' +
-          '<div class="col-md-3"><input type="text" class="form-control" id="departure_'+ number_schedule +'" value= "'+ new_departure +'"/></div>' +
-          '<div class="col-md-3"><input type="text" class="form-control" id="destination_'+ number_schedule +'" /></div>' +
-          '<div class="col-md-3"><input type="text" class="form-control datetimepicker" id="start-date_'+ number_schedule +'" value="'+ new_start_date+'"/></div>' +
-          '<div class="col-md-3"><input type="text" class="form-control datetimepicker" id="end-date_'+ number_schedule +'" /></div>' +
-          '</div>';
-      $('.basic-info-schedule').append(append);
-      $('#start-date_' + number_schedule).datetimepicker({
-        format: 'DD-MMM-YYYY'
-      });
-      $('#end-date_' + number_schedule).datetimepicker({
-        format: 'DD-MMM-YYYY'
-      });
-    });
-    $('.datetimepicker').datetimepicker({
-      format: 'DD-MMM-YYYY'
-    });
-    var sampleTags = ["Quan Vu", "Khanh Dang", "Lan Doang", "Harley Trung"]
-
-      //-------------------------------
-      // Single field
-      //-------------------------------
-        $('#participantTags').tagit({
-          availableTags: sampleTags,
-          // This will make Tag-it submit a single form value, as a comma-delimited field.
-          singleField: true,
-          singleFieldNode: $('#participant')
-        });
-
-//jQuery time
+  $(document).ready(function () {
+    //jQuery time
     var current_fs, next_fs, previous_fs; //fieldsets
     var left, opacity, scale; //fieldset properties which we will animate
     var animating; //flag to prevent quick multi-click glitches
 
-    $(".next").click(function(){
-      if(animating) return false;
+    $(".next").click(function () {
+      if (animating) return false;
       animating = true;
 
       current_fs = $(this).parent().parent();
       next_fs = $(this).parent().parent().next();
 
       //activate next step on progressbar using the index of next_fs
-      $("#progressbar li").eq($(".form-slide").index(next_fs)).addClass("active");
+      $("#progressbar").find("li").eq($(".form-slide").index(next_fs)).addClass("active");
 
       //show the next form-slide
       next_fs.show();
       //hide the current form-slide with style
       current_fs.animate({opacity: 0}, {
-        step: function(now, mx) {
+        step: function (now, mx) {
           //as the opacity of current_fs reduces to 0 - stored in "now"
           //1. scale current_fs down to 80%
           scale = 1 - (1 - now) * 0.2;
           //2. bring next_fs from the right(50%)
-          left = (now * 50)+"%";
+          left = (now * 50) + "%";
           //3. increase opacity of next_fs to 1 as it moves in
           opacity = 1 - now;
           current_fs.css({
-            'transform': 'scale('+scale+')',
+            'transform': 'scale(' + scale + ')',
             'position': 'absolute'
           });
           next_fs.css({'left': left, 'opacity': opacity});
         },
         duration: 800,
-        complete: function(){
+        complete: function () {
           current_fs.hide();
           animating = false;
         },
@@ -96,33 +61,33 @@
       });
     });
 
-    $(".previous").click(function(){
-      if(animating) return false;
+    $(".previous").click(function () {
+      if (animating) return false;
       animating = true;
 
       current_fs = $(this).parent().parent();
       previous_fs = $(this).parent().parent().prev();
 
       //de-activate current step on progressbar
-      $("#progressbar li").eq($(".form-slide").index(current_fs)).removeClass("active");
+      $("#progressbar").find("li").eq($(".form-slide").index(current_fs)).removeClass("active");
 
       //show the previous form-slide
       previous_fs.show();
       //hide the current form-slide with style
       current_fs.animate({opacity: 0}, {
-        step: function(now, mx) {
+        step: function (now, mx) {
           //as the opacity of current_fs reduces to 0 - stored in "now"
           //1. scale previous_fs from 80% to 100%
           scale = 0.8 + (1 - now) * 0.2;
           //2. take current_fs to the right(50%) - from 0%
-          left = ((1-now) * 50)+"%";
+          left = ((1 - now) * 50) + "%";
           //3. increase opacity of previous_fs to 1 as it moves in
           opacity = 1 - now;
           current_fs.css({'left': left});
-          previous_fs.css({'transform': 'scale('+scale+')', 'opacity': opacity});
+          previous_fs.css({'transform': 'scale(' + scale + ')', 'opacity': opacity});
         },
         duration: 800,
-        complete: function(){
+        complete: function () {
           current_fs.hide();
           animating = false;
         },
@@ -131,7 +96,7 @@
       });
     });
 
-    $(".submit").click(function(){
+    $(".submit").click(function () {
       return false;
     })
   });
